# trajectory_planning_genesis

src/dataset_generator/: CMakeLists.txt
src/dataset_generator/data/: labels.csv  opt_successfull.yaml
src/dataset_generator/data/opt_results/: scene_1.yaml  scene_10.yaml  scene_11.yaml  scene_12.yaml  scene_13.yaml  scene_14.yaml  scene_15.yaml  scene_16.yaml  scene_17.yaml  scene_18.yaml  scene_19.yaml  scene_2.yaml  scene_20.yaml  scene_22.yaml  scene_23.yaml  scene_3.yaml  scene_4.yaml  scene_5.yaml  scene_6.yaml  scene_7.yaml  scene_8.yaml  scene_9.yaml
src/dataset_generator/data/scene_configs/: scene_1.yaml  scene_10.yaml  scene_100.yaml  scene_1000.yaml  scene_101.yaml  scene_102.yaml  scene_103.yaml  scene_104.yaml  scene_105.yaml  scene_106.yaml  scene_107.yaml  scene_108.yaml  scene_109.yaml  scene_11.yaml  scene_110.yaml  scene_111.yaml  scene_112.yaml  scene_113.yaml  scene_114.yaml  scene_115.yaml  scene_116.yaml  scene_117.yaml  scene_118.yaml  scene_119.yaml  scene_12.yaml  scene_120.yaml  scene_121.yaml  scene_122.yaml  scene_123.yaml  scene_124.yaml  scene_125.yaml  scene_126.yaml  scene_127.yaml  scene_128.yaml  scene_129.yaml  scene_13.yaml  scene_130.yaml  scene_131.yaml  scene_132.yaml  scene_133.yaml  (+960 more)
src/dataset_generator/launch/: generate_inputs.launch
src/dataset_generator/scripts/: create_scenes.py  generate_inputs.py  generate_labels.py
src/genesis_inverse_kinematics/launch/: ik_genesis.launch
src/percept/src/: sim_pipeline.py  (+2 more)
src/planner_optimizer/: CMakeLists.txt
src/point_net/: dataset.py  pointnet_env.yaml  pointnet_pp.ipynb
(+22 files in other folders)
